apps/backstage/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: claudioed/backstage
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7000
